geogost.com conf editied

--- a/geogost.conf
+++ b/geogost.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 
-    ServerName www.geotest.com
+    ServerName goegost.com
 
     WSGIScriptAlias / /home/ubuntu/projects/geotest/geotest/wsgi.py
     WSGIDaemonProcess geogost python-home=/home/ubuntu/projects/env2 python-path=/home/ubuntu/projects/geotest
